# hsr_perception

./: CMakeLists.txt  README.md  package.xml
src/: ObjectInformationServer.cpp  PerceiveShelf.cpp  PerceiveTable.cpp  PerceptionActionServer.cpp  ShelfStatusServer.cpp  demo_client.cpp  door_client.cpp  perception_client.cpp  perception_server.cpp  shelf_client.cpp  table_client.cpp
src/include/: PerceptionActionServer.h
